--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "react-select": "^3.1.0",
     "sequelize": "^5.21.8"
   }
 }
